<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@color/yellow"
        android:fontFamily="@font/agbalumo"
        android:padding="10dp"
        android:text="@string/currency_converter"
        android:textColor="@color/blue"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/inputCurrencyValue"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:autofillHints="0"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@color/aquamarine"
        android:ems="10"
        android:fontFamily="monospace"
        android:gravity="center"
        android:hint="@string/amount"
        android:inputType="numberDecimal"
        android:padding="10dp"
        android:textColor="@color/dark_green"
        android:textColorHint="@color/dim_gray"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/inputCurrency"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.26"
        tools:ignore="VisualLintTextFieldSize" />

    <Spinner
        android:id="@+id/inputCurrency"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginEnd="20dp"
        android:background="@color/rosy_brown"
        app:layout_constraintBottom_toBottomOf="@+id/inputCurrencyValue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/inputCurrencyValue" />

    <TextView
        android:id="@+id/outputCurrencyValue"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:autoSizeMaxTextSize="20sp"
        android:autoSizeTextType="uniform"
        android:background="@color/chartreuse"
        android:fontFamily="serif"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/_0"
        android:textColor="@color/red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/outputCurrency"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputCurrencyValue" />

    <Spinner
        android:id="@+id/outputCurrency"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginEnd="20dp"
        android:background="@color/misty_rose"
        app:layout_constraintBottom_toBottomOf="@+id/outputCurrencyValue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/outputCurrencyValue"
        app:layout_constraintVertical_bias="0.59000003" />

    <Button
        android:id="@+id/showButton"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/dark_orange"
        android:text="@string/show"
        android:textColor="@color/dark_green"
        android:textSize="20sp"
        app:cornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/outputCurrencyValue"
        app:strokeColor="@color/indigo"
        app:strokeWidth="2dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@color/dark_goldenrod"
        android:fontFamily="serif"
        android:padding="10dp"
        android:text="@string/from"
        android:textColor="@color/dark_blue"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/inputCurrency"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@color/dark_goldenrod"
        android:fontFamily="serif"
        android:padding="10dp"
        android:text="@string/to"
        android:textColor="@color/dark_blue"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/outputCurrency"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>